--- a/package.json
+++ b/package.json
@@ -4,16 +4,17 @@
   "description": "",
   "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node app.js",
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
 
  
   "author": "",
   "license": "ISC",
+
   "engines" :{
     "node": "14.16.1"
   },
+  
   "dependencies": {
     "body-parser": "^1.19.0",
     "ejs": "^3.1.6",
